--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.12.16",
     "next": "^14.2.11",
     "react": "18.2.0",
